# HuffmanCompressor

./: CMakeLists.txt  README.md
huffmantrees/: exampleHuffman  exampleHuffmanTree.txt
output/: output.txt
src/: compressor.h  filehandler.cpp  filehandler.h  huffmancompressor.cpp  huffmancompressor.h  huffmantree.cpp  huffmantree.h  main.cpp  node.h
test/: CMakeLists.txt  testfilehandler.cpp  testhuffmantree.cpp
test/testFiles/: exampleHuffman.txt  testGetInput.txt
